<resources>
    <string name="app_name">izaov2</string>
    <string name="title_home">Découvrir</string>
    <string name="title_dashboard">Mes Voyages</string>
    <string name="title_notifications">Mon Compte</string>
    <string name="photo_australie">photo Australie</string>
    <string name="australie">Australie</string>
    <string name="photo_costa_rica">photo Costa Rica</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="photo_indon_sie">photo Indonésie</string>
    <string name="indon_sie">Indonésie</string>
    <string name="photo_italie">photo Italie</string>
    <string name="italie">Italie</string>
    <string name="photo_norvege">photo Norvege</string>
    <string name="norv_ge">Norvège</string>
    <string name="des_destinations_de_r_ve_rien_que_pour_vous">Des destinations de rêve rien que pour vous !</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="connexion">Connexion</string>
    <string name="favoris">Favoris</string>
    <string name="voyages_en_cours">Voyages en cours</string>
    <string name="vacances_pass_s">Vacances passés</string>
    <string name="vacances_pr_vus">Vacances prévus</string>
    <string name="mdp_oublie">Mot de Passe oublié</string>
    <string name="confirmer_mot_de_passe">Confirmer Mot de Passe</string>
    <string name="inscription">Inscription</string>
    <string name="pseudo">Pseudo</string>
    <string name="slogan">Vos vacances réinventées</string>

</resources>