<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<!-- Découvrir -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/title_notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_destinations_de_r_ve_rien_que_pour_vous"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/bleu"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/australie"
                    android:background="@drawable/roundercorner"
                    android:contentDescription="@string/photo_australie"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/australie"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/roundercorner"
                    android:contentDescription="@string/photo_costa_rica"
                    android:src="@drawable/costarica"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/costa_rica"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/indonesie"
                    android:background="@drawable/roundercorner"
                    android:contentDescription="@string/photo_indon_sie"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/indon_sie"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/italie"
                    android:background="@drawable/roundercorner"
                    android:contentDescription="@string/photo_italie"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/italie"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_marginBottom="100dp">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/norvege"
                    android:background="@drawable/roundercorner"
                    android:contentDescription="@string/photo_norvege"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/norv_ge"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>